--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
-#map { height: 700px; width: 700px }
+#html, body {
+    height: 100vh;
+    width: 100vh;
+    padding: 0px;
+    margin: 0px;
+}
+
+#map {
+    height: 50%;
+    width: 50%;
+    float: left;
+}
+
+#juxtapose {
+    margin-left: 50%;
+    height: 50%;
+    width: 50%
+    ;
+}
